# imalink-core

./: .gitignore  BACKEND_MIGRATION.md  CONTRACTS.md  LICENSE  MODEL_LAYERS_ANALYSIS.md  PHOTO_MODEL_DESIGN.md  RAW_SUPPORT.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
deploy/: DEPLOYMENT.md  QUICKSTART.md  deploy.sh  imalink-core.service  nginx-core.trollfjell.com.conf
examples/: batch_import.py  simple_import.py
service/: main.py
src/imalink_core/: __init__.py  api.py  version.py
src/imalink_core/image/: __init__.py  formats.py  raw_processor.py
src/imalink_core/metadata/: __init__.py  exif_extractor.py
src/imalink_core/models/: __init__.py  import_result.py  photo.py
src/imalink_core/preview/: __init__.py  generator.py
src/imalink_core/validation/: __init__.py  image_validator.py
tests/: generate_test_fixtures.py  test_basic.py  test_exif_extraction.py  test_image_validation.py  test_preview_generation.py  test_process_image.py  test_raw_processing.py  test_service_api.py
tests/fixtures/images/: README.md
